Fixed up so that initial admin user cannot be deleted as well as the ability to list current users and delte them

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,11 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
   runeseal-api:
     build:
@@ -20,7 +25,8 @@ services:
     ports:
       - "25601:8000"
     depends_on:
-      - runeseal-db
+      runeseal-db:
+        condition: service_healthy
     env_file:
       - .env
     volumes:
