--- a/core_passwords.yaml
+++ b/core_passwords.yaml
@@ -1,4 +1,4 @@
 admin_username: admin
-admin_password: 1PW85mVTzZmmpCM&B8M*
-system_password: f34l9g89bxa12t
-x_api_key: admin1PW85mVTzZmmpCM&B8M*f34l9g89bxa12t
+admin_password: admin123
+system_password: admin123
+x_api_key: adminadmin123admin123
